syntax = "proto3";

package genesis;

import "core/types/proto/account.proto";
import "core/types/proto/actor.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/pokt-network/pocket/runtime/genesis";

message GenesisState {
  google.protobuf.Timestamp genesis_time = 1;
  string chain_id = 2; // TODO/DISCUSS re-evaluate naming covention
  uint64 max_block_bytes = 3;
  repeated core.Account pools = 4;
  repeated core.Account accounts = 5;
  repeated core.Actor applications = 6;
  repeated core.Actor validators = 7;
  repeated core.Actor servicers = 8;
  repeated core.Actor fishermen = 9;
  Params params = 10;
}

// TECHDEBT: Explore a more general purpose "feature flag" approach that makes it easy to add/remove
// parametesr and add activation heights for them as well.
message Params {
  //@gotags: pokt:"val_type=BIGINT"
  int32 blocks_per_session = 1;
  //@gotags: pokt:"val_type=STRING"
  string app_minimum_stake = 2;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 app_max_chains = 3;
  //@gotags: pokt:"val_type=BIGINT"
  int32 app_session_tokens_multiplier = 4;
  //@gotags: pokt:"val_type=BIGINT"
  int32 app_unstaking_blocks = 5;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 app_minimum_pause_blocks = 6;
  //@gotags: pokt:"val_type=BIGINT"
  int32 app_max_pause_blocks = 7;
  //@gotags: pokt:"val_type=STRING"
  string servicer_minimum_stake = 8;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 servicer_max_chains = 9;
  //@gotags: pokt:"val_type=BIGINT"
  int32 servicer_unstaking_blocks = 10;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 servicer_minimum_pause_blocks = 11;
  //@gotags: pokt:"val_type=BIGINT"
  int32 servicer_max_pause_blocks = 12;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 servicers_per_session = 13;

  //@gotags: pokt:"val_type=STRING"
  string fisherman_minimum_stake = 14;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 fisherman_max_chains = 15;
  //@gotags: pokt:"val_type=BIGINT"
  int32 fisherman_unstaking_blocks = 16;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 fisherman_minimum_pause_blocks = 17;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 fisherman_max_pause_blocks = 18;

  //@gotags: pokt:"val_type=STRING"
  string validator_minimum_stake = 19;
  //@gotags: pokt:"val_type=BIGINT"
  int32 validator_unstaking_blocks = 20;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 validator_minimum_pause_blocks = 21;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 validator_max_pause_blocks = 22;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 validator_maximum_missed_blocks = 23;

  //@gotags: pokt:"val_type=SMALLINT"
  int32 validator_max_evidence_age_in_blocks = 24;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 proposer_percentage_of_fees = 25;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 missed_blocks_burn_percentage = 26;
  //@gotags: pokt:"val_type=SMALLINT"
  int32 double_sign_burn_percentage = 27;

  //@gotags: pokt:"val_type=STRING"
  string message_double_sign_fee = 28;
  //@gotags: pokt:"val_type=STRING"
  string message_send_fee = 29;
  //@gotags: pokt:"val_type=STRING"
  string message_stake_fisherman_fee = 30;
  //@gotags: pokt:"val_type=STRING"
  string message_edit_stake_fisherman_fee = 31;
  //@gotags: pokt:"val_type=STRING"
  string message_unstake_fisherman_fee = 32;
  //@gotags: pokt:"val_type=STRING"
  string message_pause_fisherman_fee = 33;
  //@gotags: pokt:"val_type=STRING"
  string message_unpause_fisherman_fee = 34;
  //@gotags: pokt:"val_type=STRING"
  string message_fisherman_pause_servicer_fee = 35;
  //@gotags: pokt:"val_type=STRING"
  string message_test_score_fee = 36;
  //@gotags: pokt:"val_type=STRING"
  string message_prove_test_score_fee = 37;
  //@gotags: pokt:"val_type=STRING"
  string message_stake_app_fee = 38;
  //@gotags: pokt:"val_type=STRING"
  string message_edit_stake_app_fee = 39;
  //@gotags: pokt:"val_type=STRING"
  string message_unstake_app_fee = 40;
  //@gotags: pokt:"val_type=STRING"
  string message_pause_app_fee = 41;
  //@gotags: pokt:"val_type=STRING"
  string message_unpause_app_fee = 42;
  //@gotags: pokt:"val_type=STRING"
  string message_stake_validator_fee = 43;
  //@gotags: pokt:"val_type=STRING"
  string message_edit_stake_validator_fee = 44;
  //@gotags: pokt:"val_type=STRING"
  string message_unstake_validator_fee = 45;
  //@gotags: pokt:"val_type=STRING"
  string message_pause_validator_fee = 46;
  //@gotags: pokt:"val_type=STRING"
  string message_unpause_validator_fee = 47;
  //@gotags: pokt:"val_type=STRING"
  string message_stake_servicer_fee = 48;
  //@gotags: pokt:"val_type=STRING"
  string message_edit_stake_servicer_fee = 49;
  //@gotags: pokt:"val_type=STRING"
  string message_unstake_servicer_fee = 50;
  //@gotags: pokt:"val_type=STRING"
  string message_pause_servicer_fee = 51;
  //@gotags: pokt:"val_type=STRING"
  string message_unpause_servicer_fee = 52;
  //@gotags: pokt:"val_type=STRING"
  string message_change_parameter_fee = 53;

  //@gotags: pokt:"val_type=STRING"
  string acl_owner = 54;
  //@gotags: pokt:"val_type=STRING"
  string blocks_per_session_owner = 55;
  //@gotags: pokt:"val_type=STRING"
  string app_minimum_stake_owner = 56;
  //@gotags: pokt:"val_type=STRING"
  string app_max_chains_owner = 57;
  //@gotags: pokt:"val_type=STRING"
  string app_session_tokens_multiplier_owner = 58;
  //@gotags: pokt:"val_type=STRING"
  string app_unstaking_blocks_owner = 59;
  //@gotags: pokt:"val_type=STRING"
  string app_minimum_pause_blocks_owner = 60;
  //@gotags: pokt:"val_type=STRING"
  string app_max_paused_blocks_owner = 61;
  //@gotags: pokt:"val_type=STRING"
  string servicer_minimum_stake_owner = 62;
  //@gotags: pokt:"val_type=STRING"
  string servicer_max_chains_owner = 63;
  //@gotags: pokt:"val_type=STRING"
  string servicer_unstaking_blocks_owner = 64;
  //@gotags: pokt:"val_type=STRING"
  string servicer_minimum_pause_blocks_owner = 65;
  //@gotags: pokt:"val_type=STRING"
  string servicer_max_paused_blocks_owner = 66;
  //@gotags: pokt:"val_type=STRING"
  string servicers_per_session_owner = 67;
  //@gotags: pokt:"val_type=STRING"
  string fisherman_minimum_stake_owner = 68;
  //@gotags: pokt:"val_type=STRING"
  string fisherman_max_chains_owner = 69;
  //@gotags: pokt:"val_type=STRING"
  string fisherman_unstaking_blocks_owner = 70;
  //@gotags: pokt:"val_type=STRING"
  string fisherman_minimum_pause_blocks_owner = 71;
  //@gotags: pokt:"val_type=STRING"
  string fisherman_max_paused_blocks_owner = 72;
  //@gotags: pokt:"val_type=STRING"
  string validator_minimum_stake_owner = 73;
  //@gotags: pokt:"val_type=STRING"
  string validator_unstaking_blocks_owner = 74;
  //@gotags: pokt:"val_type=STRING"
  string validator_minimum_pause_blocks_owner = 75;
  //@gotags: pokt:"val_type=STRING"
  string validator_max_paused_blocks_owner = 76;
  //@gotags: pokt:"val_type=STRING"
  string validator_maximum_missed_blocks_owner = 77;
  //@gotags: pokt:"val_type=STRING"
  string validator_max_evidence_age_in_blocks_owner = 78;
  //@gotags: pokt:"val_type=STRING"
  string proposer_percentage_of_fees_owner = 79;
  //@gotags: pokt:"val_type=STRING"
  string missed_blocks_burn_percentage_owner = 80;
  //@gotags: pokt:"val_type=STRING"
  string double_sign_burn_percentage_owner = 81;
  //@gotags: pokt:"val_type=STRING"
  string message_double_sign_fee_owner = 82;
  //@gotags: pokt:"val_type=STRING"
  string message_send_fee_owner = 83;
  //@gotags: pokt:"val_type=STRING"
  string message_stake_fisherman_fee_owner = 84;
  //@gotags: pokt:"val_type=STRING"
  string message_edit_stake_fisherman_fee_owner = 85;
  //@gotags: pokt:"val_type=STRING"
  string message_unstake_fisherman_fee_owner = 86;
  //@gotags: pokt:"val_type=STRING"
  string message_pause_fisherman_fee_owner = 87;
  //@gotags: pokt:"val_type=STRING"
  string message_unpause_fisherman_fee_owner = 88;
  //@gotags: pokt:"val_type=STRING"
  string message_fisherman_pause_servicer_fee_owner = 89;
  //@gotags: pokt:"val_type=STRING"
  string message_test_score_fee_owner = 90;
  //@gotags: pokt:"val_type=STRING"
  string message_prove_test_score_fee_owner = 91;
  //@gotags: pokt:"val_type=STRING"
  string message_stake_app_fee_owner = 92;
  //@gotags: pokt:"val_type=STRING"
  string message_edit_stake_app_fee_owner = 93;
  //@gotags: pokt:"val_type=STRING"
  string message_unstake_app_fee_owner = 94;
  //@gotags: pokt:"val_type=STRING"
  string message_pause_app_fee_owner = 95;
  //@gotags: pokt:"val_type=STRING"
  string message_unpause_app_fee_owner = 96;
  //@gotags: pokt:"val_type=STRING"
  string message_stake_validator_fee_owner = 97;
  //@gotags: pokt:"val_type=STRING"
  string message_edit_stake_validator_fee_owner = 98;
  //@gotags: pokt:"val_type=STRING"
  string message_unstake_validator_fee_owner = 99;
  //@gotags: pokt:"val_type=STRING"
  string message_pause_validator_fee_owner = 100;
  //@gotags: pokt:"val_type=STRING"
  string message_unpause_validator_fee_owner = 101;
  //@gotags: pokt:"val_type=STRING"
  string message_stake_servicer_fee_owner = 102;
  //@gotags: pokt:"val_type=STRING"
  string message_edit_stake_servicer_fee_owner = 103;
  //@gotags: pokt:"val_type=STRING"
  string message_unstake_servicer_fee_owner = 104;
  //@gotags: pokt:"val_type=STRING"
  string message_pause_servicer_fee_owner = 105;
  //@gotags: pokt:"val_type=STRING"
  string message_unpause_servicer_fee_owner = 106;
  //@gotags: pokt:"val_type=STRING"
  string message_change_parameter_fee_owner = 107;
}
